# UR-MiR-mobile-manipulator

./: README.md
Universal_Robots_ROS2_Description/config/: initial_positions.yaml
Universal_Robots_ROS2_Description/config/ur5e/: joint_limits.yaml
Universal_Robots_ROS2_Description/urdf/: ur.ros2_control.xacro  ur_macro.xacro
Universal_Robots_ROS2_Description/urdf/inc/: ur_common.xacro
Universal_Robots_ROS2_Driver/ur_controllers/include/ur_controllers/: scaled_joint_trajectory_controller.hpp
Universal_Robots_ROS2_Driver/ur_controllers/src/: scaled_joint_trajectory_controller.cpp
Universal_Robots_ROS2_Driver/ur_moveit_config/config/: controllers.yaml  kinematics.yaml
Universal_Robots_ROS2_Driver/ur_moveit_config/launch/: ur_moveit.launch.py
Universal_Robots_ROS2_Driver/ur_moveit_config/srdf/: mir_100.srdf
gazebo_models/ar_tags/scripts/: generate_markers_model.py
manipulator_codes/: CMakeLists.txt  package.xml
manipulator_codes/src/: move_it_aruco.cpp
mir_robot/: README.md  ros2.repos
mir_robot/autogen_pkg/: CMakeLists.txt
mir_robot/autogen_pkg/install/: local_setup.sh  setup.sh
mir_robot/autogen_pkg/install/autogen_pkg/share/autogen_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
mir_robot/autogen_pkg/install/autogen_pkg/share/autogen_pkg/launch/: autogen_pkg.launch.py
mir_robot/autogen_pkg/log/: latest_build
mir_robot/autogen_pkg/rviz/: default.rviz
mir_robot/mir_description/config/: diffdrive_controller.yaml  joint_state_controller.yaml  ur_manipulator.yaml
mir_robot/mir_description/meshes/collision/: D435i_mounted.STL
mir_robot/mir_description/urdf/: mir.urdf.xacro
mir_robot/mir_description/urdf/include/: caster.urdf.xacro  mir_250_v1.urdf.xacro  sick_s300.urdf.xacro  wheel.urdf.xacro
mir_robot/mir_driver/launch/: mir_headless_launch.py
mir_robot/mir_driver/mir_driver/: mir_bridge.py  rosbridge.py
mir_robot/mir_gazebo/: CMakeLists.txt  package.xml
mir_robot/mir_gazebo/launch/: mir_gazebo_launch.py  mobile_manipulator.launch.py
mir_robot/mir_gazebo/worlds/: maze.world
mir_robot/mir_gazebo/worlds/include/marker_0001/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
mir_robot/mir_gazebo/worlds/include/marker_0001/meshes/: marker_0001.dae
mir_robot/mir_navigation/: CMakeLists.txt  nav2_test.py  package.xml
mir_robot/mir_navigation/config/: mir_mapping_async.yaml  mir_mapping_async_sim.yaml  mir_nav_params.yaml  mir_nav_params_namespaced.yaml
mir_robot/mir_navigation/launch/include/: amcl.py  navigation.py
point_cloud_functions/: package.xml  setup.cfg  setup.py
point_cloud_functions/point_cloud_functions/: point_cloud_reader.py
realsense2_description/urdf/: _d435.urdf.xacro  _d435i.urdf.xacro  _d435i_gazebo.xacro
realsense_ros2_gazebo/: CMakeLists.txt  README.md  gazebo_hardware_plugins.xml  package.xml
realsense_ros2_gazebo/include/realsense_ros2_gazebo/: realsense_ros2_gazebo.hpp
realsense_ros2_gazebo/launch/: description.launch.py  simulation.launch.py
realsense_ros2_gazebo/src/: RealSensePlugin.cpp  realsense_ros2_gazebo.cpp
realsense_ros2_gazebo/xacro/: depthcam.xacro  depthcam.xacro.urdf  test.xacro  test_t265.xacro  tracker.xacro  tracker.xacro.urdf
ros2_aruco/ros2_aruco/: package.xml  setup.py
ros2_aruco/ros2_aruco/config/: aruco_parameters.yaml
ros2_aruco/ros2_aruco/ros2_aruco/: aruco_pose_nav2_goal.py  aruco_pose_to_manipulate.py  aruco_pose_to_moveit.py  aruco_pose_to_nav_goal.py
simple_moveit2_universal_robots_movement/launch/: hello_moveit_ur_launch.py
simple_moveit2_universal_robots_movement/src/: hello_moveit_ur.cpp
